tests/sksl/errors/BinaryTypeCoercion.glsl
### Compilation failed:

error: 11: type mismatch: '=' cannot operate on 'half', 'float'
error: 12: type mismatch: '=' cannot operate on 'half', 'float'
error: 13: type mismatch: '*=' cannot operate on 'half', 'float'
error: 18: type mismatch: '=' cannot operate on 'half4', 'float4'
error: 19: type mismatch: '=' cannot operate on 'half4', 'float4'
error: 20: type mismatch: '*=' cannot operate on 'half4', 'float4'
error: 24: type mismatch: '=' cannot operate on 'half4', 'float4'
error: 25: type mismatch: '=' cannot operate on 'half4', 'float4'
error: 30: type mismatch: '=' cannot operate on 'half4', 'float4'
error: 31: type mismatch: '=' cannot operate on 'half4', 'float4'
error: 32: type mismatch: '*=' cannot operate on 'half4', 'float'
error: 36: type mismatch: '=' cannot operate on 'half4', 'float4'
error: 37: type mismatch: '=' cannot operate on 'half4', 'float4'
13 errors
